<resources>
    <string name="app_name">Mvp_mvvm</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="Enter">Войти</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="name">Имя</string>
</resources>